--- a/html/index.html
+++ b/html/index.html
@@ -50,7 +50,7 @@
 					<p><span style="font-family: Helvetica; font-size: 15px; text-transform: uppercase">Discover The Best Recipes</span></p>
 					<a href="#" class="btn_dark">Discover</a>
 				</div>
-				<img id="png" src="https://www.pngmart.com/files/22/Dessert-PNG-Transparent.png"></img>
+				<img id="png" src=""></img>
 			</div>
 			<div class="wavebottom"></div>
 		</section>
@@ -59,7 +59,7 @@
 				<h2>About Us</h2>
 				<p style="font-family: Helvetica; font-size: 15px; color: #0e1b17; margin-left: -80px; margin-top: -20px">	This website was made for people who have ingredients but don't know what to cook. Whether you are still in middle school or a fully grown adult, there are many recipes out there that you can cook. This website contains lists of foods plus their respective recipe. From pastas and chicken to tiramisu and cake, there is something here for everyone. Enjoy!</p>
 				<a href="#" class="btn_light">Contact Us</a>
-				<img id="img" src="https://images.unsplash.com/photo-1570549986390-6bd150ac3515?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMjA3fDB8MXxzZWFyY2h8M3x8d2hpdGUlMjBzYXVjZSUyMHBhc3RhfHwwfHx8fDE2MTYzMzg5NDU&ixlib=rb-1.2.1&q=80&w=1080"></img>
+				<img id="img" src=""></img>
 			</div>
 		</section>
 		<section class="contact" id="contact">
@@ -69,7 +69,7 @@
 					<h1>Contact Us</h1>
 					<p><span style="font-family: Helvetica; font-size: 15px; text-transform: uppercase">Locations are all online. You can contact us by email or by phone.</span></p>
 				</div>
-				<img id="png2" src="https://images.unsplash.com/photo-1564053489984-317bbd824340?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMjA3fDB8MXxhbGx8fHx8fHx8fHwxNjI2OTg4NTgy&ixlib=rb-1.2.1&q=80&w=1080"></img>
+				<img id="png2" src=""></img>
 			</div>
 			<div class="wavebottom2"></div>
 		</section>
